syntax = "proto3";

package user;

option go_package = "AuthService/proto";

message SignUpUser{
    string firstName=16;
    string lastName=17;
    string phoneNumber=18;
    string password=19;
    string email=20;
    string gender = 21;
}

message Token {
    string error = 22;
    string token = 23;
}

service RouteGuide {
    rpc signUp(SignUpUser) returns (Token) {}
}